# GameOfLife

./: .gitignore  CMakeLists.txt  GameOfLife.sln  GameOfLife.vcxproj  GameOfLife.vcxproj.filters  README.md  allocator.hpp  cmake_build.cmd  config.hpp  cosmos.hpp  cosmos_builder.cpp  cosmos_builder.hpp  life.hpp  main.cpp
src/: CMakeLists.txt  allocator.hpp  cosmos.cpp  cosmos.hpp  cosmos_builder.cpp  cosmos_builder.hpp  life.hpp  main.cpp  test_main.cpp  thread_pool.cpp  thread_pool.hpp  wgpu_main.cpp
src/game/: CMakeLists.txt  button.cpp  button.hpp  canvas.hpp  color.hpp  game.cpp  game.hpp  game_system.hpp  geometry.cpp  gui.cpp  gui.hpp  input.cpp  input.hpp  rectangle.cpp  rectangle.hpp  render_set.hpp  time_controller.hpp  view_port.cpp  view_port.hpp  visual_life.cpp  visual_life.hpp  win.cpp  win.hpp  world.cpp  world.hpp
src/wgpu/: CMakeLists.txt  wadapter.cpp  wadapter.hpp  wbind_group.cpp  wbind_group.hpp  wbuffer.cpp  wbuffer.hpp  wcommand.cpp  wcommand_buffer.cpp  wcommand_buffer.hpp  wdevice.cpp  wdevice.hpp  wpipe_line.cpp  wpipe_line.hpp  wpipe_line_layout.cpp  wpipe_line_layout.hpp  wrender_pass.cpp  wrender_pass.hpp  wsurface.cpp  wsurface.hpp  wtexture.cpp  wtexture.hpp
